# reference-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: roadmap.md
docs/adr/: 0001-model-driven-core.md  0002-sqlite-derived-storage.md  0003-canonical-documents.md  0004-append-only-versioning.md  0005-no-arbitrary-code-from-yaml.md
docs/architecture/: binding-v1.md  boundaries-and-mvp.md  data-model-v1.md  document-model-v1.md  overview.md  recognition-v1.md  vault-layout.md  workflow-v1.md
src/reference_engine/: __init__.py  errors.py  metadata_scalars.py  registration.py
src/reference_engine/binding/: __init__.py  contract.py
src/reference_engine/db/: __init__.py  artifacts.py  connection.py  document_models.py  documents.py  migrations.py  recognition_runs.py
src/reference_engine/model/: __init__.py  loader.py  normalization.py  types.py  validation.py
src/reference_engine/recognition/: __init__.py  authorization.py  canonical.py  decimals.py  orchestration.py  outcomes.py  rules.py  scoring.py  snapshots.py  types.py
src/reference_engine/resources/: __init__.py  document-model-v1.schema.json
src/reference_engine/resources/migrations/: 001_initial_schema.sql  002_recognition_run_snapshots.sql  (+1 more)
tests/fixtures/models/: invalid-field-type.yaml  invalid-natural-key.yaml  invalid-query.yaml  invalid-recognition-rule.yaml  invalid-schema-version.yaml  valid-complete.yaml  valid-minimal.yaml
tests/unit/: test_document_model_schema.py  test_document_registration.py  test_package_import.py
tests/unit/binding/: test_contract.py
tests/unit/db/: test_recognition_runs.py  test_repositories.py  test_sqlite_schema.py  test_wheel_resources.py
tests/unit/model/: test_loader.py
tests/unit/recognition/: test_canonical_decimals.py  test_orchestration.py  test_outcomes.py  test_rules.py
