[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reference-engine"
version = "0.1.0"
description = "Model-driven reference document engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-jsonschema>=4.23",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"reference_engine.resources" = ["*.json"]
"reference_engine.resources.migrations" = ["*.sql"]
